--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             src="./Assests/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://www.linkedin.com/feed/'"
+            onclick="location.href='https://in.linkedin.com/in/aditya-wali-b43697227"
           />
           <img
             src="./Assests/github.png"
@@ -140,7 +140,7 @@
           alt="LinkedIn icon"
           class="icon contact-icon"
         />
-        <p><a href="https://www.linkedin.com/feed/">LinkedIn</a></p>
+        <p><a href="https://in.linkedin.com/in/aditya-wali-b43697227">LinkedIn</a></p>
       </div>
     </div>
   </section>
